# serializer version: 1
# name: test_switch[load_platforms0][switch.device1_autolock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.device1_autolock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Autolock',
    'platform': 'yale_smart_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'autolock',
    'unique_id': '1111-autolock',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[load_platforms0][switch.device1_autolock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device1 Autolock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device1_autolock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[load_platforms0][switch.device2_autolock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.device2_autolock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Autolock',
    'platform': 'yale_smart_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'autolock',
    'unique_id': '2222-autolock',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[load_platforms0][switch.device2_autolock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device2 Autolock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device2_autolock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[load_platforms0][switch.device3_autolock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.device3_autolock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Autolock',
    'platform': 'yale_smart_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'autolock',
    'unique_id': '3333-autolock',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[load_platforms0][switch.device3_autolock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device3 Autolock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device3_autolock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[load_platforms0][switch.device7_autolock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.device7_autolock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Autolock',
    'platform': 'yale_smart_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'autolock',
    'unique_id': '7777-autolock',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[load_platforms0][switch.device7_autolock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device7 Autolock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device7_autolock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[load_platforms0][switch.device8_autolock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.device8_autolock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Autolock',
    'platform': 'yale_smart_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'autolock',
    'unique_id': '8888-autolock',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[load_platforms0][switch.device8_autolock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device8 Autolock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device8_autolock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[load_platforms0][switch.device9_autolock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.device9_autolock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Autolock',
    'platform': 'yale_smart_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'autolock',
    'unique_id': '9999-autolock',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[load_platforms0][switch.device9_autolock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device9 Autolock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device9_autolock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
